-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0 Beta4
-
None
-
Windows 10, MSVC 2019
-
-
80b82153b71a8a973a81703c8050d5e97f3b5a8f (qt/qtmultimedia/dev) 47915e1ef2ee28376ce12c07b694d3f9ac2f9576 (qt/qtmultimedia/6.2) bff50b075e9a0b4d8018e6a398e6a818ca2def10 (qt/qtmultimedia/6.2.0)
MediaPlayer position property is not updated while playing a video.
Probably it's a specific issue only for Windows WMF backend.
Regression from Qt 5.15.2.
See attached simple example.
- relates to
-
QTBUG-97069 [Windows] Crash (use-after-free) on (Q)MediaPlayer destruction
-
- Closed
-
-
QTBUG-92225
Windows backend for "new" QtMultimedia
-
- Closed
-