Add a timer reporting a change in the playback position

Fixes: QTBUG-95576
Pick-to: 6.2 6.2.0
Change-Id: I1b3cdd1d473f04687f33f75502c80ce548aaba51
Reviewed-by: Lars Knoll <lars.knoll@qt.io>